--- a/config.json
+++ b/config.json
@@ -3,8 +3,10 @@
   "token": "",
   "secret_channels": "",
   "role_id": "",
+  "user_id": "",
   "delay": "",
   "world_folder": "Path/to/world_folder",
   "player_folder": "Path/to/player_folder",
-  "gtps_folder": "Path/to/gtps_folder"
+  "gtps_folder": "Path/to/gtps_folder",
+  "using_http": true
 }
