--- a/config.json
+++ b/config.json
@@ -3,6 +3,7 @@
   "token": "",
   "secret_channels": "",
   "role_id": "",
+  "user_id": "",
   "delay": "",
   "world_folder": "Path/to/world_folder",
   "player_folder": "Path/to/player_folder",
