--- a/config.json
+++ b/config.json
@@ -7,5 +7,5 @@
   "delay": "",
   "world_folder": "Path/to/world_folder",
   "player_folder": "Path/to/player_folder",
-  "gtps_folder": "Path/to/gtps_folder",
+  "gtps_folder": "Path/to/gtps_folder"
 }
